--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "dotenv": "^16.4.5",
     "gh-pages": "^6.1.1",
     "react-app-rewired": "^2.2.1",
-    "sass": "^1.78.0"
+    "sass": "^1.78.0",
+    "tailwindcss": "^3.4.17"
   }
 }
