--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-js-loader": "^0.1.3",
     "react-lazy-load": "^4.0.1",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-linkify": "^1.0.0-alpha",
     "react-loader-spinner": "^6.1.6",
     "react-mobile-datepicker": "^4.0.2",
     "react-redux": "^9.1.1",
